; ModuleID = '/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-sirfsoc.c_sirfsoc_rtc_writel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-sirfsoc.c_sirfsoc_rtc_writel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sirfsoc_rtc_drv = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sirfsoc_rtc_drv*, i64, i64)* @sirfsoc_rtc_writel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sirfsoc_rtc_writel(%struct.sirfsoc_rtc_drv* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.sirfsoc_rtc_drv*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.sirfsoc_rtc_drv* %0, %struct.sirfsoc_rtc_drv** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.sirfsoc_rtc_drv*, %struct.sirfsoc_rtc_drv** %4, align 8
  %8 = getelementptr inbounds %struct.sirfsoc_rtc_drv, %struct.sirfsoc_rtc_drv* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = load %struct.sirfsoc_rtc_drv*, %struct.sirfsoc_rtc_drv** %4, align 8
  %11 = getelementptr inbounds %struct.sirfsoc_rtc_drv, %struct.sirfsoc_rtc_drv* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* %5, align 8
  %14 = add nsw i64 %12, %13
  %15 = load i64, i64* %6, align 8
  %16 = call i32 @regmap_write(i32 %9, i64 %14, i64 %15)
  ret void
}

declare dso_local i32 @regmap_write(i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
